--- a/deno.jsonc
+++ b/deno.jsonc
@@ -31,6 +31,7 @@
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@^1.0.13",
+    "@std/dotenv": "jsr:@std/dotenv@^0.225.5",
     "@std/testing": "jsr:@std/testing@^1.0.12",
     "deno-slack-sdk/": "https://deno.land/x/deno_slack_sdk@2.15.1/",
     "deno-slack-api/": "https://deno.land/x/deno_slack_api@2.8.0/"
